fixed portrait image on safari

--- a/assets/scss/pages/_single.scss
+++ b/assets/scss/pages/_single.scss
@@ -180,9 +180,9 @@
 	.entry-header {
 		@include rhythm(margin-bottom, 2);
 
-		@include query-above($lap) {
-			overflow: hidden;
-		}
+		//@include query-above($lap) {
+		//	overflow: hidden;
+		//}
 	}
 
 	.entry-title {
